# pokemon-team-rater

./: .dockerignore  .env.example  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Dockerfile.db  Dockerfile.web  Makefile  README.md  Tiltfile  app.py  docker-compose.yml  forms.py  gunicorn.conf.py  justfile  kubernetes.yml  models.py  proposal.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
static/: autocomplete.js  main.css  script.js
templates/: base.html  home-anon.html  home.html
templates/pokemon/: search.html
templates/team/: comment-edit.html  edit.html  new-team.html  show.html
templates/user/: login.html  show.html  signup.html
tests/: test_team.py  test_user.py
