[tool.poetry]
name = "pokemon-team-rater"
version = "0.1.0"
description = ""
authors = ["Geena Jackson <91204583+geenajackson@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"
packages = [{include = "pokemon_team_rater"}]

[tool.poetry.dependencies]
python = "^3.10.8"
bcrypt = "4.0.0"
blinker = "1.5"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
dnspython = "2.2.1"
email-validator = "1.3.0"
flask = "2.2.2"
flask-bcrypt = "1.0.1"
flask-debugtoolbar = "0.13.1"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.0.1"
greenlet = "1.1.3"
gunicorn = "20.1.0"
idna = "3.4"
importlib-metadata = "5.0.0"
is-disposable-email = "1.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
psycopg2-binary = "2.9.3"
python-dotenv = "0.21.0"
requests = "2.28.1"
sqlalchemy = "1.4.41"
urllib3 = "1.26.12"
werkzeug = "2.2.2"
wtforms = "3.0.1"
wtforms-validators = "1.0.0"
zipp = "3.8.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.4.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-datafiles = "^3.0.0"
pytest-xdist = "^2.5.0"
rich = "^12.6.0"
ruff = "^0.0.269"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []
# Skip unused variable rules
extend-ignore = ["D203", "E203", "E251", "E266", "E401", "E402", "E501", "F401", "F403"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    "dist",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    "__pycache__",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Black (default: 88)
line-length = 130

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
